# sphinx_autosummary_autocollect

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sphinx_autosummary_autocollect/: __init__.py  generate.py
